# quvi

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  gen-ver.sh
debian/: changelog  control  copyright
doc/: Makefile.in
doc/man1/: Makefile.am  Makefile.in  quvi.1  quvi.1.pod
m4/: version.m4
src/: Makefile.am  Makefile.in
src/quvi/: Makefile.am  Makefile.in  asprintf.c  cmdline.c  cmdline.ggo  cmdline.h  platform.h  quvi.c  vasprintf.c
